# hcc_plan_api

./: .env  CLAUDE.md  main.py  oauth2_authentication.py  pydantic_upgrade.txt  pyproject.toml  requirements.txt  settings.py  test.py
.serena/memories/: code_style_conventions.md  development_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md  tech_stack.md
databases/: database.py  db_actors.sqlite  enums.py  models.py  pony_models.py  pydantic_models.py  schemas.py  services.py
remote/: access_data.json  access_data_.json  dispodaten_blanko__BW.json  dispodaten_blanko__Mainz.json  progressbars.py  remote_access.py  remote_gui.py  settings_data.json  tools.py
routers/: actors.py  admin.py  auth.py  dispatcher.py  index.py  supervisor.py
static/: Logo_HappyCarrotCompany.xcf  calendar.css
templates/: account_settings_actor.html  alert_invalid_credentials.html  alert_post_success.html  index_actor.html  index_base.html  index_home.html  index_new_passwort.html  post_success.html
utilities/: progressbars.py  scheduler.py  send_mail.py  utils.py
