[project]
name = "hcc-plan-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt<4.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pony>=0.7.19",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "pytz>=2025.2",
]
